eseecizio non corretto

--- a/jsnack2/index.html
+++ b/jsnack2/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/style.css">
     <title>Document</title>
 </head>
 <body>
+
+    
+    <div id="rosso"></div>
+    <div id="verde"></div>
     
     <script src="assets/file.js"></script>
 </body>
